--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
+html{
+  background: #00000070;
+}
+
 .App {
   text-align: center;
+  font-family: Andada Pro;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Panel {
+  width: 320px;
+  height: 568px;
+  margin-left: 500px;
+  margin-right: 500px;
+  margin-top: 30px;
+  border-radius: 25px;
+  background-color: #9de9e9;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
